// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterSection Should matched snapshot correctly when matchSmallScreen=false and isExpandFilter=false 1`] = `
<ResponsiveDialog
  fullWidth={true}
  onClose={[MockFunction]}
  open={false}
>
  <ForwardRef(DialogContent)>
    <ForwardRef(Stack)>
      <ForwardRef(Stack)
        direction="row"
        justifyContent="space-between"
      >
        <Analytics
          elementName="gened_search_filter"
        >
          <Component />
        </Analytics>
        <Analytics
          elementName="day_search_filter"
        >
          <Component />
        </Analytics>
      </ForwardRef(Stack)>
      <Analytics
        elementName="period_range_filter"
      >
        <Component />
      </Analytics>
    </ForwardRef(Stack)>
    <Styled(Component)
      color="primary"
      fullWidth={true}
      onClick={[MockFunction]}
      variant="outlined"
    >
      เลือกตัวกรอง
    </Styled(Component)>
  </ForwardRef(DialogContent)>
</ResponsiveDialog>
`;

exports[`FilterSection Should matched snapshot correctly when matchSmallScreen=false and isExpandFilter=true 1`] = `
<ResponsiveDialog
  fullWidth={true}
  onClose={[MockFunction]}
  open={true}
>
  <ForwardRef(DialogContent)>
    <ForwardRef(Stack)>
      <ForwardRef(Stack)
        direction="row"
        justifyContent="space-between"
      >
        <Analytics
          elementName="gened_search_filter"
        >
          <Component />
        </Analytics>
        <Analytics
          elementName="day_search_filter"
        >
          <Component />
        </Analytics>
      </ForwardRef(Stack)>
      <Analytics
        elementName="period_range_filter"
      >
        <Component />
      </Analytics>
    </ForwardRef(Stack)>
    <Styled(Component)
      color="primary"
      fullWidth={true}
      onClick={[MockFunction]}
      variant="outlined"
    >
      เลือกตัวกรอง
    </Styled(Component)>
  </ForwardRef(DialogContent)>
</ResponsiveDialog>
`;

exports[`FilterSection Should matched snapshot correctly when matchSmallScreen=true and isExpandFilter=false 1`] = `""`;

exports[`FilterSection Should matched snapshot correctly when matchSmallScreen=true and isExpandFilter=true 1`] = `
<Styled(Component)
  hasTags={true}
  variant="outlined"
>
  <ForwardRef(Stack)
    overflow="auto"
    p={4}
    pr={2}
    spacing={4}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "order": 1,
        }
      }
    >
      <Analytics
        elementName="gened_search_filter"
      >
        <Component />
      </Analytics>
    </ForwardRef(Box)>
    <ForwardRef(Box)
      sx={
        Object {
          "order": 2,
        }
      }
    >
      <Analytics
        elementName="day_search_filter"
      >
        <Component />
      </Analytics>
    </ForwardRef(Box)>
    <ForwardRef(Box)
      sx={
        Object {
          "order": 3,
        }
      }
    >
      <Analytics
        elementName="period_range_filter"
      >
        <Component />
      </Analytics>
    </ForwardRef(Box)>
  </ForwardRef(Stack)>
</Styled(Component)>
`;

exports[`FilterSection Should render CheckboxGroup of GenEds correctly when when matchSmallScreen=false and isExpandFilter=false 1`] = `
<CheckboxGroup
  checkboxes={Array []}
  id="genEdFilter"
  log={[Function]}
  title="หมวดหมู่ GenEd"
/>
`;

exports[`FilterSection Should render CheckboxGroup of GenEds correctly when when matchSmallScreen=false and isExpandFilter=true 1`] = `
<CheckboxGroup
  checkboxes={Array []}
  id="genEdFilter"
  log={[Function]}
  title="หมวดหมู่ GenEd"
/>
`;

exports[`FilterSection Should render CheckboxGroup of GenEds correctly when when matchSmallScreen=true and isExpandFilter=true 1`] = `
<CheckboxGroup
  checkboxes={Array []}
  id="genEdFilter"
  log={[Function]}
  title="หมวดหมู่ GenEd"
/>
`;

exports[`FilterSection Should render CheckboxGroup of days correctly when matchSmallScreen=false and isExpandFilter=false 1`] = `
<CheckboxGroup
  checkboxes={Array []}
  id="dayOfWeekFilter"
  log={[Function]}
  title="วันในสัปดาห์"
/>
`;

exports[`FilterSection Should render CheckboxGroup of days correctly when matchSmallScreen=false and isExpandFilter=true 1`] = `
<CheckboxGroup
  checkboxes={Array []}
  id="dayOfWeekFilter"
  log={[Function]}
  title="วันในสัปดาห์"
/>
`;

exports[`FilterSection Should render CheckboxGroup of days correctly when matchSmallScreen=true and isExpandFilter=true 1`] = `
<CheckboxGroup
  checkboxes={Array []}
  id="dayOfWeekFilter"
  log={[Function]}
  title="วันในสัปดาห์"
/>
`;
